# engram

./: .gitignore  .mcp.json  CLAUDE.md  CREDITS.md  EXAMPLES.md  README.md  STRUCTURE.md
.claude/: settings.json
_meta/mcp-server-py/: .gitignore  README.md  pyproject.toml
_meta/mcp-server-py/scripts/: fetch-embedding-model.py  launch.sh
_meta/mcp-server-py/src/engram/: __main__.py  config.py  server.py
_meta/mcp-server-py/src/engram/backend/: dispatcher.py
_meta/mcp-server-py/src/engram/fs/: frontmatter.py  paths.py  vault_io.py
_meta/mcp-server-py/src/engram/manifest/: builder.py
_meta/mcp-server-py/src/engram/model/: note.py
_meta/mcp-server-py/src/engram/rest/: client.py  connection.py  errors.py  tls.py
_meta/mcp-server-py/src/engram/scoring/: embeddings.py  health.py  memrl.py  relevance.py  retrieve.py
_meta/mcp-server-py/src/engram/state/: embedding_store.py  feedback.py  manifest_cache.py  sessions.py  utility.py
_meta/mcp-server-py/src/engram/tools/: active.py  checkpoint.py  command.py  context.py  document_map.py  feedback.py  health.py  manifest_tool.py  open.py  patch.py  periodic.py  prune_dryrun.py  read.py  recent.py  related.py  retrieve.py  search.py  session_check.py  sigma_rho.py  status.py  tags.py  unmined_sessions.py
_meta/mcp-server-py/tests/: conftest.py  test_embedding_store.py  test_embeddings.py  test_onnx_backend.py  test_relevance.py  test_rest_client.py  test_retrieve.py  test_retrieve_tool.py  test_status_tool.py
_meta/mcp-server-py/tests/fixtures/tiny-onnx/: model.onnx  tokenizer.json
docs/: index.html  main.js  styles.css
(+76 files in other folders)
