[project]
name = "engram"
version = "4.0.0"
description = "Engram MCP Server — REST-first Obsidian vault integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "anyio>=4.0.0,<5.0.0",
    "keyring>=25.0.0,<27.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.13",
]
# Semantic dense-retrieval backend (ONNX sentence-transformer). Optional: the
# server falls back to a dependency-free hashing embedding when absent.
embeddings = [
    "onnxruntime>=1.17",
    "tokenizers>=0.20",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "A", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["engram"]

# Optional `embeddings` extra — not installed in the base/dev env.
[[tool.mypy.overrides]]
module = ["onnxruntime", "tokenizers", "numpy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live Obsidian plugin",
]
